# doom-helix

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  doomhelix-release.yml  pages.yml  release.yml
docs/: agent.md  index.html  site.css  site.js
helix-codex-agent/: Cargo.toml
helix-codex-agent/src/: main.rs
helix-loader/src/: lib.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  config.rs  lib.rs  main.rs
helix-term/src/agent/: acp.rs  config.rs  context.rs  mod.rs  runtime.rs  session.rs  transport.rs
helix-term/src/commands/: lsp.rs  typed.rs
helix-term/src/ui/: editor.rs  statusline.rs
helix-vcs/src/: lib.rs
helix-view/src/: document.rs  editor.rs  theme.rs  tree.rs
site/: index.html  site.css
