[package]
name = "helix-codex-agent"
description = "Experimental ACP adapter for running Codex from Helix."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "helix-codex-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde_json = "1.0"
